# blog_private

./: README.md
docs/: index.html  linear-algebra.html  linear-transformations.html  matrix-transform-playground.html  search.json
js/00/: node-example.js  running-js.html
lightly/00_lightly_train/: ssl_pretrain.py
nvim/lua/theprimeagen/: packer.lua
physics/su2/: .gitignore  README.md  _quarto.yml  index.qmd  linear-algebra.qmd  linear-transformations.qmd  matrix-transform-playground.qmd  requirements.txt
physics/su2/scripts/: generate_transformation_figures.py
rs/jan_2026_parquet/3_parquet_crates_overview/: Cargo.toml
rs/jan_2026_parquet/part3_parquet_crates_claude/: Cargo.toml  generate_data.py  pyproject.toml
rs/jan_2026_parquet/part3_parquet_crates_claude/parquet_columnar/: Cargo.toml
rs/jan_2026_parquet/part3_parquet_crates_claude/parquet_columnar/src/: main.rs
rs/jan_2026_parquet/part3_parquet_crates_claude/parquet_columnar_s3/: Cargo.toml
rs/jan_2026_parquet/part3_parquet_crates_claude/parquet_columnar_s3/src/: main.rs
rs/jan_2026_parquet/part3_parquet_crates_claude/util/: Cargo.toml
rs/jan_2026_parquet/part3_parquet_crates_claude/util/src/: lib.rs
rs/oct_2025_parquet/: Cargo.toml  README.md  build.rs
rs/oct_2025_parquet/1_thrift/: README.md
rs/oct_2025_parquet/2_parquet/: Cargo.toml  README.md  generate_data.py
rs/oct_2025_parquet/2_parquet/src/: decoders.rs  display.rs  errors.rs  lib.rs  main.rs  metadata.rs  pages.rs  reader.rs
rs/oct_2025_parquet/src/: main.rs  my_compact.rs  thrift.rs
torch_distributed/: Readme.md
torch_distributed/01_parallelism_methods/: Readme.md  sandbox.ipynb
torch_distributed/02_torch_nn_data_parallel/: sandbox.ipynb
torch_distributed/03_torch_distributed/: main.py
torch_distributed/04_dist_training/: sandbox.ipynb
torch_distributed/05_torch_lightning/: train.py
torch_distributed/06_retrieval_embeddings_finetune/: Readme.md  encode_passages.py  get_data.sh  lib.py  lightning_train.py  sandbox.ipynb  search.py
torch_distributed/07_training_tool_basics/: Readme.md  lib.py  lightning_train.py  msmarco_convert.py  search.py
torch_distributed/08_lr_scheduling/: Readme.md  encode_passages.py  lib.py  lightning_train.py  sandbox.ipynb
(+17 files in other folders)
