[package]
name = "parquet_writer"
version = "0.1.0"
edition = "2024"

[dependencies]
thrift = "0.13"  # Must match parquet-format's thrift version
integer-encoding = "4.0"  # For varint and zigzag encoding
hex = "0.4"  # For debugging
parquet-format = "4.0"  # Official Parquet Thrift definitions
serde = { version = "1.0", features = ["derive"] }  # For JSON serialization
serde_json = "1.0"  # For pretty JSON printing
byteorder = "1.5"  # For reliable little-endian I/O
arrow-schema = "53.0"  # For Arrow schema types
arrow-ipc = "53.0"  # For decoding Arrow IPC format
base64 = "0.22"  # For decoding base64-encoded Arrow schema
zstd = "0.13"  # For Zstd decompression
